tests/k8s_ingress_test_new/k8s_netpols.yaml
# new netpols between deployments
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productpage-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - port: 9080
  podSelector:
    matchLabels:
      app: productpage
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: details-netpol
spec:
  egress: []
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 9080
      protocol: TCP
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reviews-netpol
spec:
  egress:
  - ports:
    - port: 9080
    to:
    - podSelector:
        matchLabels:
          app: productpage
  - ports:
    - port: 9080
    to:
    - podSelector:
        matchLabels:
          app: ratings
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ratings-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - port: 9080
  podSelector:
    matchLabels:
      app: ratings
  policyTypes:
  - Ingress
  - Egress
---
